@@ -1,14 +1,17 @@
 package com.inditex.rrhh.icmclcwb.model.app.tarea.service;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import java.util.Arrays;
 import java.util.List;
 
+import com.inditex.amigafwk.service.aaa.userdetails.heimdal.HeimdalUser;
+import com.inditex.amigafwk.service.aaa.userdetails.heimdal.HeimdalUtils;
+import com.inditex.amigafwk.service.aaa.userdetails.heimdal.model.HeimdalUserDetails;
 import com.inditex.rrhh.icmclcwb.api.app.dto.IdTareaDto;
 import com.inditex.rrhh.icmclcwb.api.app.tarea.dto.TareaLimpiezaDto;
 import com.inditex.rrhh.icmclcwb.dto.IdTareaDTO;
@@ -22,6 +25,10 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.mockito.Mockito;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContext;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 
 @ExtendWith(SpringExtension.class)
@@ -60,9 +67,37 @@ public class TareaLimpiezaServiceImplTest {
     final IdTareaDto idTareaDto2 = new IdTareaDto();
     idTareaDto1.setId(32L);
     idTareaDto2.setId(789L);
-    final List<IdTareaDTO> ids = Arrays.asList();
+    final List<IdTareaDTO> ids = List.of();
     this.tareaLimpiezaServiceImpl.save(ids);
     verify(this.tareaLimpiezaMapper, times(1)).idTareaDtoToTareaLimpiezaDto(ids);
+  }
+
+  @Test
+  public void saveTestBlank() {
+    final TareaLimpiezaDto tareaLimpiezaDto = new TareaLimpiezaDto();
+    tareaLimpiezaDto.setNombreUsuario("");
+
+    final HeimdalUserDetails heimdalUserDetails = new HeimdalUserDetails();
+    heimdalUserDetails.setLogin("testLogin");
+    final HeimdalUser heimdalUser = HeimdalUser.create(heimdalUserDetails, List.of("1", "2"));
+    final Authentication authentication = Mockito.mock(Authentication.class);
+    when(authentication.getPrincipal())
+        .thenReturn(heimdalUser);
+    final SecurityContext securityContext = Mockito.mock(SecurityContext.class);
+    Mockito.when(securityContext.getAuthentication()).thenReturn(authentication);
+    SecurityContextHolder.setContext(securityContext);
+    final TareaLimpieza tareaLimpieza = new TareaLimpieza();
+    when(HeimdalUtils.getHeimdalUser()).thenReturn(heimdalUser);
+    when(this.tareaLimpiezaMapper.tareaLimpiezaDtoToTareaLimpieza(any(TareaLimpiezaDto.class))).thenReturn(tareaLimpieza);
+    when(this.tareaLimpiezaRepository.save(any(TareaLimpieza.class))).thenReturn(tareaLimpieza);
+    when(this.tareaLimpiezaMapper.tareaLimpiezaToTareaLimpiezaDto(any(TareaLimpieza.class))).thenReturn(tareaLimpiezaDto);
+
+    final TareaLimpiezaDto result = this.tareaLimpiezaServiceImpl.save(tareaLimpiezaDto);
+
+    assertEquals("testLogin", result.getNombreUsuario());
+    verify(this.tareaLimpiezaRepository, times(1)).save(tareaLimpieza);
+    verify(this.tareaLimpiezaMapper, times(1)).tareaLimpiezaDtoToTareaLimpieza(tareaLimpiezaDto);
+    verify(this.tareaLimpiezaMapper, times(1)).tareaLimpiezaToTareaLimpiezaDto(tareaLimpieza);
   }
 
 }
